--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 
 // In this section you declare where to find the dependencies of your project
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 configurations {
@@ -20,10 +20,8 @@ configurations {
 // In this section you declare the dependencies for your production and test code
 dependencies {
     provided 'com.amazonaws:aws-lambda-java-core:1.1.0'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.3'
-    compile 'org.apache.httpcomponents:httpclient:4.5.4'
     compile 'software.amazon.awssdk:dynamodb:2.0.0-preview-7'
+    compile 'com.mannanlive:btcmarkets-java:0.1'
     compile 'org.twitter4j:twitter4j-core:4.0.6'
     testCompile 'junit:junit:4.12'
 }
